postgres db setup, prisma setup and integration with BE and also installed docker

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -20,6 +20,12 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@hireiq/shared": ["../../../packages/shared/src"],
+      "@hireiq/ui": ["../../../packages/ui/src"],
+      "@hireiq/db": ["../../../packages/db/src"]
+    }
   }
 }
