created auth route and tested it and also did prettier setup in from root.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "packageManager": "pnpm@10.17.0",
   "workspaces": [
-    "apps/*",
+    "apps/api",
+    "apps/client/web",
     "packages/*"
   ],
   "scripts": {
